--- a/app.yaml
+++ b/app.yaml
@@ -1,35 +1,39 @@
 application: schedule-pro
-version: 1
-runtime: python
+version: 2
+runtime: python27
 api_version: 1
+threadsafe: true
 
 handlers:
 - url: /static
   static_dir: static
-  
+
 - url: /favicon.ico
   static_files: static/favicon.ico
   upload: static/favicon.ico
-  
+
 - url: /css
   static_dir: static/css
 
 - url: /scripts
   static_dir: static/scripts
-  
+
 - url: /images
   static_dir: static/images
-  
+
 - url: /admin/.*
-  script: $PYTHON_LIB/google/appengine/ext/admin
+  script: google.appengine.ext.admin.application
   login: admin
 
 - url: /
-  script: main.py
+  script: main.app
 
 - url: /.*
-  script: main.py
+  script: main.app
   login: required
 
-builtins:
-- datastore_admin: on
+libraries:
+- name: webapp2
+  version: "2.5.2"
+- name: jinja2
+  version: "2.6"
